refactor: 학습 예제 기준으로 주석/구조 정리 (보안 기능 추가 없음)
- 복잡한 로직에 1, 2, 3... 번호형 사고 흐름 주석 추가
- 잘못되거나 과거 흔적이 남은 주석 정리
- 진위가 애매한 용어(인증 vs 인가 등) 정정
- System.out.println 제거 또는 SLF4J log 로 대체
- Mustache 노출용 @Data 누락 보완(RefundResponse.ListDTO)
- JOIN FETCH / Pageable 관련 쿼리 설명 보강
- 예외 처리기 alert 스크립트 공통 helper 로 통합

영향 범위: _core, user, board, reply, payment, purchase, refund, admin
외부 의존성/시큐리티/신규 기능은 추가하지 않음.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>